--- a/package.json
+++ b/package.json
@@ -9,18 +9,14 @@
   "keywords": [],
   "main": "src/index.js",
   "dependencies": {
-    "react": "16.8.6",
-    "react-dom": "16.8.6",
-    "react-scripts": "3.2.0"
+    "parcel-bundler": "^1.13.4"
   },
   "devDependencies": {
     "typescript": "3.3.3"
   },
   "scripts": {
-    "start": "react-scripts start",
-    "build": "react-scripts build",
-    "test": "react-scripts test --env=jsdom",
-    "eject": "react-scripts eject"
+    "dev": "parcel index.html",
+    "build": "parcel build index.html"
   },
   "browserslist": [
     ">0.2%",
